--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Kitty Speller</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Babel for on-the-fly JSX transpilation in the browser -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <style>
     body {
       font-family: 'Fredoka', sans-serif;
@@ -48,23 +50,14 @@
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
-  <!-- Explicitly link index.tsx as a module with a relative path -->
-  <script type="module" src="./index.tsx"></script>
 </head>
 <body class="bg-pastel-pink">
   <div id="root"></div>
-  <div id="no-server-warning" style="display:none; position: fixed; top: 0; left: 0; width: 100%; background: #fee2e2; color: #991b1b; padding: 1rem; text-align: center; z-index: 9999; font-weight: bold; border-bottom: 2px solid #ef4444;">
-    ⚠️ Please run this app using a local web server (e.g., Live Server) to fix CORS errors.
-  </div>
-  <script>
-    if (window.location.protocol === 'file:') {
-      document.getElementById('no-server-warning').style.display = 'block';
-    }
-  </script>
+  <!-- type="text/babel" and data-type="module" allows Babel to handle the imports and JSX -->
+  <script type="text/babel" data-type="module" src="./index.js"></script>
 </body>
 </html>
